# table-annotator

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
api/: Dockerfile  api.py  crop_lines.py  extract_ocr_data.py  extract_people_data.py  extract_table_delimiter_data.py  extract_table_structure_data.py  find_lines.py  google_ocr_image.py  img.py  plot_height_and_width_distribution.py  pyproject.toml  select_ocr_data.py  table_ocr.py  tesserotate.sh  try_matching.py
api/migrations/: generate_state_for_docs_with_tables.py  table_v1_to_v2.py
api/table_annotator/: cellgrid.py  column_types.py  constants.py  img.py  io.py  lines.py  lm.py  matching.py  ocr.py  pre_annotated.py  types.py
api/table_annotator/data_normalization/: aux_functions.py  column_processing.py  column_splitting.py  regex_conditions.py
api/test_data/01/: 0100_5312606_1.json
api/test_data/01/0100_5312606_1/00/: ocr_result.json
api/test_ocr_data/0004_5305174_1/00/: ocr_result.json
api/test_ocr_data/0094_3412073_1/00/: ocr_result.json
api/test_ocr_data/0094_3412073_1/01/: ocr_result.json
api/tests/: conftest.py  test_api.py  test_img.py  test_io.py  test_lm.py  test_normalization.py  test_ocr.py
google-ocr-server/: Dockerfile  pyproject.toml  server.py
ocr-server/: .gitignore  Dockerfile  fake_server.py  pyproject.toml  server.py
ocr-server/ocr_server/: lines.py
ocr-server/tests/: test_ocr_server.py
public/: index.html  manifest.json
segmenting-server/: Dockerfile  pyproject.toml  server.py
segmenting-server/tests/: test_segmenting_server.py
src/: Annotator.tsx  App.css  App.tsx  BrowsingMenu.tsx  BucketPage.tsx  OverviewPage.tsx  ProjectPage.tsx  api.ts  dataModel.ts  documentStates.ts  geometry.ts  index.css  index.tsx  ocrApp.css  ocrApp.tsx  overviewApp.css  overviewApp.tsx  path.ts  store.ts  types.ts  util.ts
src/components/: AnnotatorMenu.tsx  CellColumnLine.tsx  CellRowLine.tsx  ColumnKnob.tsx  ColumnLine.tsx  ColumnSetterBlocker.tsx  ColumnSetterSpace.tsx  DataTypesDeleteButton.tsx  DocumentImage.tsx  HasSavedIndicator.tsx  HelpScreen.tsx  HelperGrid.tsx  LoadingScreen.tsx  MatchButton.tsx  MultiSelect.tsx  NewColumnLine.tsx  NewRowLine.tsx  RowKnob.tsx  RowLine.tsx  RowSetterBlocker.tsx  RowSetterSpace.tsx  SplitTable.tsx  SplitTableHeader.tsx  StartedTable.tsx  SyncIndicator.tsx  TableBorders.tsx  TableElement.tsx  TableLock.tsx  VirtualValueAddButton.tsx  VirtualValueDeleteButton.tsx
src/components/MenuComponents/: ApplyPreAnnotatedDataButton.tsx  BackButton.tsx  BackToOverviewButton.tsx  BackToProjectButton.tsx  DeleteOCRDataButton.tsx  DeleteObjectButton.tsx  DocumentStateSelect.tsx  InvertDocumentButton.tsx  MatchButton.tsx  NextDocumentButton.tsx  PositionDisplay.tsx  PreviousDocumentButton.tsx  SegmentTableButton.tsx  SetOCRViewButton.tsx  ShowHelpRasterizationButton.tsx  TurnRightButton.tsx  TurnSlightLeftButton.tsx  TurnSlightRightButton.tsx
