[tool.poetry]
name = "table-annotator-api"
version = "0.1.0"
description = ""
authors = ["Thomas Werkmeister <thomas@werkmeister.me>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"
opencv-python = "^4.5.3"
scipy = "^1.7.3"
pydantic = "^1.8.2"
Pillow = "^8.4.0"
tqdm = "^4.62.3"
Flask-Cors = "^3.0.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
