[tool.poetry]
name = "table-annotator-api"
version = "0.1.0"
description = ""
authors = ["Thomas Werkmeister <thomas@werkmeister.me>"]

[tool.poetry.dependencies]
python = "~3.9"
Flask = "^2.3.2"
python-dotenv = "^0.19.0"
opencv-python = "^4.7.0"
scipy = "^1.10.1"
pydantic = "^1.10.7"
Pillow = "^9.5.0"
tqdm = "^4.62.3"
Flask-Cors = "^3.0.10"
requests = "^2.29.0"
google-cloud-vision = "^3.4.1"
filelock = "^3.12.0"
python-levenshtein = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
