[tool.poetry]
name = "google-ocr-server"
version = "0.1.0"
description = ""
authors = ["Thomas Werkmeister <thomas@werkmeister.me>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
python-dotenv = "^0.19.2"
google-cloud-vision = "^2.7.3"
Pillow = "^9.1.1"
numpy = "^1.22.4"
opencv-python = "^4.5.5"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
