[tool.poetry]
name = "segmenting-server"
version = "0.1.0"
description = ""
authors = ["Thomas Werkmeister <thomas@werkmeister.me>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
python-dotenv = "^0.19.2"
table-segmenter = {git = "https://github.com/twerkmeister/table-segmenter.git", rev = "master"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
